# fridamcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  docker-compose.yml  fridamcp.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: android-build.yml  ci.yml  publish-pypi.yml  release-binaries.yml
android/: README.md  start_frida.sh
android-app/: .gitignore  README.md  gradlew  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
docs/: FAQ.md  MOBILE_APP_DESIGN.md  QUICKSTART.md  USAGE.md
fridamcp/: README.md  __init__.py  __main__.py  app.py  config.py  launch.sh  requirements.txt  server.py  setup.py
fridamcp/android/: install_frida.sh
fridamcp/core/: __init__.py  device_manager.py  frida_client.py  mock_device.py  session_manager.py
fridamcp/docs/: ARCHITECTURE.md  MODULES.md  USAGE.md
fridamcp/fridamcp/: config.py  server.py
fridamcp/fridamcp/core/: device_manager.py  frida_client.py  session_manager.py
fridamcp/fridamcp/modules/: crypto.py  filesystem.py  hook.py  memory.py  network.py  process.py  ui_automation.py
fridamcp/fridamcp/utils/: apk_injector.py  js.py
fridamcp/injector/: inject_apk.py
fridamcp/modules/: __init__.py  crypto.py  hook.py  log.py  network.py  process.py  script.py
fridamcp/scripts/: setup.sh
fridamcp/utils/: __init__.py  apk_injector.py  hook_sandbox.py  logger.py
injector/: README.md  inject_apk.py
injector/templates/: gadget_config.json
mobile-app/: README.md  package-lock.json  package.json
mobile-app/src/app/: globals.css  layout.tsx  page.tsx
mobile-app/src/components/mobile/: app-detail-sheet.tsx  apps-screen.tsx  bottom-nav.tsx  confirm-dialog.tsx  dashboard-screen.tsx  (+7 more)
mobile-app/src/lib/: app-service.ts  mock-data.ts  types.ts  utils.ts
qemu-bridge/: README.md  fridamcp-qemu-server.py  test_js_scripts.py  test_mcp_server.py
scripts/: run.sh
tests/: __init__.py  conftest.py  test_apk_injector.py  test_apk_injector_fix.py  test_config.py  test_hook_sandbox.py  test_mcp_integration.py  test_mock_device.py  test_session_manager.py
(+33 files in other folders)
